# perl-DBR

./: .gitignore  .travis.yml  APP_SETUP.md  CHANGELOG.md  CHANGE_LOG  LICENSE  Makefile.PL  README  README.md  RELEASE_NOTES.txt  clean  cpanfile  deploy  dist  tarball  todo.txt
demo/: README.txt  init.sh
demo/conf/: dbr.conf
demo/doc/: fkeys.txt
demo/script/: add_car.pl  all_cars.pl  create.pl  find.pl  sampler.pl
demo/sql/: car_dealer_relationships.sql  car_dealer_translators.sql  create_car_dealer_database.sql
doc/: README  objects_and_methods.dia
example/: basic.pl  example_basic.pl  join.pl  moderate.pl
example/cars/: README.txt
example/music/: basic.pl  browse_test.sh  insert.pl  reverse_mapping.pl
example/schemas/: dbr_schema_sqlite.sql
examples/: basic.pl  insert.pl  join.pl  moderate.pl  reverse_mapping.pl
examples/cars/: README.txt  (+1 more)
inst/: Makefile.in  aclocal.m4  configure.ac  configure.ac.in  make-makefile  perl-DBR.spec.in
lib/: DBR.pm
old_lib/: DBR.pm
sql/: dbr_schema.sql  dbr_schema_mysql.sql  dbr_schema_sqlite.sql  example_schema_sqlite.sql
src/: config.rs  context.rs  dbr.rs  error.rs  lib.rs  util.rs
t/: 01_compile.t  01a_dbrconf.t  04_common.t  05_basics.t  06_intermediate.t  07_buildwhere.t  08_resultset_refine.t  09_subqueries.t  10_translators.t  11_txn_hooks.t  17_uncached_setter.t  autoinstance.t  rt_37.t  rt_38.t  rt_40.t  rt_44.t  rt_52.t  rt_53.t  rt_54.t  rt_55.t  rt_57.t  rt_61.t  rt_gh2.t  rt_joincount.t  sorting.t
test/: dbrtest.pl  dbrv1_select_1.pl  dbrv1_update_1.pl
trunk/: build-rpm  system-clean
(+239 files in other folders)
